[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Fernando Santos <fernandodsds36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pysimpleguiweb = "^0.33.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
